[tool.poetry]
name = "optuna-mlp-hello-world"
version = "0.1.0"
description = ""
authors = ["Kelvin Ducray <kelvin.ducray@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.9.0"
torchvision = "^0.10.0"
pytorch-lightning = "^1.4.5"
optuna = "^2.9.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
pytest = "^6.2.5"
mypy = "^0.910"
flake8 = "^4.0.1"
flake8-mypy = "^17.8.0"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"